style path added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/logo.png" type="images/png">
     <title>ePep - Your Gateway to the Latest News & Education Updates</title>
     <meta name="description" content="Stay informed with ePep, your trusted platform for accessing the latest news and educational updates. Explore a curated collection of newspapers and resources in one place.">
