Mager changes added

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -61,34 +61,36 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2415945664844835" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
-      <header class="title_epep">
-        <h1 class="epep_title"><a href="https://www.epep.in" style="text-decoration: none; color: inherit;">ePep.in</a></h1>
-      </header>
-    </div>
+          <!-- Navigation Bar -->
+            <div>
+              <header class="title_epep">
+                <h1 class="epep_title"><a href="https://www.epep.in" style="text-decoration: none; color: inherit;">ePep.in</a></h1>
+              </header>
+            </div>
+            <br>
 
-    <div class="container">
-        <a href="https://epaper.financialexpress.com" class="image-link"><img src="images/financial-express.png" alt="Image 1"></a>
-        <a href="https://epaper.thehindu.com/reader" class="image-link"><img src="images/The-Hindu.png" alt="Image 2"></a>
-        <a href="http://onlineepaper.asianage.com" class="image-link"><img src="images/The-Asia-Age.png" alt="Image 3"></a>
-        <a href="http://epaper.deccanchronicle.com/states.aspx" class="image-link"><img src="images/Deccan.png" alt="Image 4"></a>
-        <a href="https://epaper.thehansindia.com" class="image-link"><img src="images/the-huns-india.png" alt="Image 5"></a>
-    </div>
+            <!-- aboutus content -->
+                <div  style="width: 80%; margin: auto;">
 
-    <div class="container">
-        <a href="http://epaper.andhrabhoomi.net" class="image-link"><img src="images/andhra-bhoomi.png" alt="Image 6"></a>
-        <a href="https://epaper.andhrajyothy.com" class="image-link"><img src="images/aandra-jothi.png" alt="Image 7"></a>
-        <a href="https://epaper.prabhanews.com" class="image-link"><img src="images/aandra-praba.png" alt="Image 8"></a>
-        <a href="https://epaper.eenadu.net" class="image-link"><img src="images/eenadu.png" alt="Image 9"></a>
-        <a href="https://epaper.sakshi.com" class="image-link"><img src="images/saskshi.png" alt="Image 10"></a>
-        <a href="https://epaper.vaartha.com" class="image-link"><img src="images/vaartha.png" alt="Image 11"></a>
-        <a href="https://epaper.v6velugu.com" class="image-link"><img src="images/velugu.png" alt="Image 12"></a>
-        <a href="https://epaper.ntnews.com" class="image-link"><img src="images/namasthe-telangana .png" alt="Image 13"></a>
-        <a href="https://epaper.manatelangana.news" class="image-link"><img src="images/mana-telangana.png" alt="Image 14"></a>
-        <a href="https://epaper.swetchadaily.com" class="image-link"><img src="images/swecha.png" alt="Image 15"></a>
-        <a href="https://www.suryaepaper.com" class="image-link"><img src="images/surya.png" alt="Image 16"></a>
-        <a href="https://epaper.visalaandhra.com" class="image-link"><img src="images/vishalandra.png" alt="Image 17"></a>
-    </div>
+                    <h1>About Us</h1>
+                    <hr>
+                    <p><strong>ePep.in</strong> is a user-friendly online platform designed to provide quick and easy access to various newspapers' official websites. Our mission is to help students, educational institutions, and anyone interested in staying updated with the latest news by offering a centralized portal where they can access newspaper content without the need to search through multiple sources.</p>
+
+                    <p>Our platform serves as a gateway, redirecting users to the official newspaper websites upon clicking on the provided links. We do not host or store any original content, ensuring that users are always directed to the primary source for the most accurate and up-to-date information. By simply visiting <strong>ePep.in</strong>, users can efficiently access the latest articles, updates, and news from multiple respected newspapers, all in one place.</p>
+
+                    <p>At <strong>ePep.in</strong>, we understand the importance of easy access to reliable information, especially for students, educators, and professionals who rely on accurate news for educational purposes or professional growth. That’s why we aim to simplify the process of accessing quality newspaper content by offering an intuitive and straightforward interface.</p>
+
+                    <p>We are committed to providing a seamless user experience with fast access to news from trusted sources. Whether you're looking for daily updates, educational resources, or staying informed on current events, <strong>ePep.in</strong> serves as the perfect tool to keep you connected to the world’s most respected newspapers.</p>
+
+                    <p>Our platform does not alter or modify the content it links to. We believe in providing users with direct access to the original content, ensuring transparency and authenticity of the information shared.</p>
+
+                    <p>While we do not require users to sign up or provide personal information, we value privacy and make sure that your experience on our website is as secure and simple as possible. With <strong>ePep.in</strong>, all you need is to visit the website, click on the newspaper links, and access the content you need.</p>
+
+                    <p>In the future, we aim to continue expanding our service by adding more newspapers and educational resources to help our users stay informed and engaged. We believe that access to information is a fundamental part of education and personal growth, and we are here to make that access easier, faster, and more convenient.</p>
+
+                    <p>Thank you for visiting <strong>ePep.in</strong>—your gateway to a world of news and knowledge!</p>
+
+                </div>
 
     <footer>
       <div class="footer-links">
