--- a/pages/terms.html
+++ b/pages/terms.html
@@ -61,34 +61,52 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2415945664844835" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
-      <header class="title_epep">
-        <h1 class="epep_title"><a href="https://www.epep.in" style="text-decoration: none; color: inherit;">ePep.in</a></h1>
-      </header>
-    </div>
+          <!-- Navigation Bar -->
+            <div>
+              <header class="title_epep">
+                <h1 class="epep_title"><a href="https://www.epep.in" style="text-decoration: none; color: inherit;">ePep.in</a></h1>
+              </header>
+            </div>
 
-    <div class="container">
-        <a href="https://epaper.financialexpress.com" class="image-link"><img src="images/financial-express.png" alt="Image 1"></a>
-        <a href="https://epaper.thehindu.com/reader" class="image-link"><img src="images/The-Hindu.png" alt="Image 2"></a>
-        <a href="http://onlineepaper.asianage.com" class="image-link"><img src="images/The-Asia-Age.png" alt="Image 3"></a>
-        <a href="http://epaper.deccanchronicle.com/states.aspx" class="image-link"><img src="images/Deccan.png" alt="Image 4"></a>
-        <a href="https://epaper.thehansindia.com" class="image-link"><img src="images/the-huns-india.png" alt="Image 5"></a>
-    </div>
+              <!--Terms of Service  -->
+              
+            <br>
+            <h1 style="text-align: center;">Terms of Service</h1>
 
-    <div class="container">
-        <a href="http://epaper.andhrabhoomi.net" class="image-link"><img src="images/andhra-bhoomi.png" alt="Image 6"></a>
-        <a href="https://epaper.andhrajyothy.com" class="image-link"><img src="images/aandra-jothi.png" alt="Image 7"></a>
-        <a href="https://epaper.prabhanews.com" class="image-link"><img src="images/aandra-praba.png" alt="Image 8"></a>
-        <a href="https://epaper.eenadu.net" class="image-link"><img src="images/eenadu.png" alt="Image 9"></a>
-        <a href="https://epaper.sakshi.com" class="image-link"><img src="images/saskshi.png" alt="Image 10"></a>
-        <a href="https://epaper.vaartha.com" class="image-link"><img src="images/vaartha.png" alt="Image 11"></a>
-        <a href="https://epaper.v6velugu.com" class="image-link"><img src="images/velugu.png" alt="Image 12"></a>
-        <a href="https://epaper.ntnews.com" class="image-link"><img src="images/namasthe-telangana .png" alt="Image 13"></a>
-        <a href="https://epaper.manatelangana.news" class="image-link"><img src="images/mana-telangana.png" alt="Image 14"></a>
-        <a href="https://epaper.swetchadaily.com" class="image-link"><img src="images/swecha.png" alt="Image 15"></a>
-        <a href="https://www.suryaepaper.com" class="image-link"><img src="images/surya.png" alt="Image 16"></a>
-        <a href="https://epaper.visalaandhra.com" class="image-link"><img src="images/vishalandra.png" alt="Image 17"></a>
-    </div>
+              <div  style="width: 80%; margin: auto;">
+
+                <hr>
+
+                <h3>About Us</h3>
+                <p>ePep.in provides users with easy access to various newspaper websites by offering links to those sites. We do not store or display the original content of these newspapers. Users are redirected to the official newspaper websites upon clicking the links.</p>
+
+                <h3>User Responsibilities</h3>
+                <p>By using ePep.in, you agree to:</p>
+                
+                    <ul>
+                        <li>Access the website and its contents in accordance with applicable laws and regulations.</li>
+                        <li>Not use the website for unlawful purposes or attempt to breach its security.</li>
+                        <li>Refrain from uploading or sharing any content that could disrupt the functionality of the website.</li>
+                        <li>Acknowledge that we are not responsible for the content displayed on third-party websites.</li>
+                    </ul>
+
+                <h3>Content and Links</h3>
+                <p>ePep.in solely provides links to external newspaper websites. We do not alter, store, or display any original content from those websites. Once you click on any link, you will be redirected to the respective newspaper's website, and any concerns regarding the content should be addressed with the respective website owners.</p>
+
+                <h3>Cookies and Tracking</h3>
+                <p>We use cookies to enhance user experience, analyze website usage, and track performance. By using our website, you consent to the use of cookies as described in our Privacy Policy.</p>
+
+                <h3>Limitation of Liability</h3>
+                <p>ePep.in is not responsible for any direct or indirect damages caused by the use of our website or the content available on third-party websites. We do not guarantee that our website or external websites will be free of errors or security risks.</p>
+
+                <h3>No Original Content Hosting</h3>
+                <p>We do not host or modify any content from the newspapers. Our service only provides a simple redirect to the official newspaper websites. You understand and accept that ePep.in has no control over the content displayed on these external sites.</p>
+
+                <h3>Modifications to Terms</h3>
+                <p>ePep.in reserves the right to update these Terms and Conditions at any time. Any changes will be posted on this page with an updated "Effective Date." We encourage you to review the terms periodically.</p>
+
+
+              </div>
 
     <footer>
       <div class="footer-links">
